# ai-rail

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: ARCHITECTURE.md  COMMANDS.md  INSTALL.md  MASTER_PROMPT.md  QUICKSTART.md  RELEASE.md  ROADMAP.md  THREE_MODELS.md  WORKFLOWS.md
examples/demo-todo/: DEMO_SCRIPT.md  README.md  package.json  server.js
examples/demo-todo/issues/: 001-add-body-validation.md  002-delete-missing-404.md  003-add-health-endpoint.md
src/ai_rail/: brain.py  checks.py  cli.py  config.py  git_ops.py  github_ops.py  prompts.py  roadmap.py  ship.py  support.py  template_ops.py
src/ai_rail/template/.rail/: .gitignore  AGENTS.md  AIDER.md  AI_CONTRACT.md  CHATGPT.md  CLAUDE.md  CODEX.md  PROJECT.md  README.md  THREE_MODELS.md  config.json  rail.py
tests/: test_cli.py
