[build-system]
requires = ["hatchling>=1.25", "editables>=0.5"]
build-backend = "hatchling.build"

[project]
name = "ai-rail"
version = "0.1.0a16"
description = "A local-first workflow rail and portable project brain for AI-assisted development."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Afshin Saberi" }]
keywords = ["ai", "cli", "codex", "chatgpt", "claude", "cursor", "github", "workflow", "developer-tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Version Control :: Git"
]
dependencies = [
  "tomli>=2.0; python_version < \"3.11\""
]

[project.urls]
Homepage = "https://github.com/afshinsb/ai-rail"
Repository = "https://github.com/afshinsb/ai-rail"
Documentation = "https://github.com/afshinsb/ai-rail/tree/master/docs"
Changelog = "https://github.com/afshinsb/ai-rail/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/afshinsb/ai-rail/issues"

[project.scripts]
rail = "ai_rail.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_rail"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/docs", "/examples", "/README.md", "/LICENSE", "/CHANGELOG.md", "/SECURITY.md", "/CONTRIBUTING.md"]

[project.optional-dependencies]
dev = ["pytest>=8"]
